# Accelerated-K-Means

./: CMakeLists.txt  README.md
benchmarks/: run_benchmarks.sh
include/: kernels.cuh
src/: main.cu
